--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,5 +58,12 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     /* Advanced Options */
     "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "./__tests__"
+  ],
+  "include": [
+    "./index.ts",
+    "./lib"
+  ]
 }
