--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./out/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/guerard/native-host-messenger"
+    "url": "git://github.com/guerard/native-host-messenger.git"
   },
   "publishConfig": {
     "registry":"https://npm.pkg.github.com/"
